--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 mypy pytest
+        pip install -r requirements.txt
         pip install -e .
     - name: Lint with flake8
       run: |
