intial release maybe

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,4 +30,6 @@ packages =
 python_requires = >=3.7
 install_requires=
     pandas >= 1.0.0
+setup_requires =
+    setuptools_scm >= 1.15
 include_package_data = True
