--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 license_file = LICENSE
-name = pyzinc
+name = zincio
 author = Scott Jespersen
 description = I/O for Project Haystack Zinc file format
 long_description = file:README.rst
 long_description_content_type = text/x-rst
-url = https://pyzinc.readthedocs.io/
+url = https://zincio.readthedocs.io/
 project_urls =
-    pyzinc documentation = https://pyzinc.readthedocs.io/en/latest/
-    pyzinc source = https://github.com/sdjespersen/pyzinc/
+    zincio documentation = https://zincio.readthedocs.io/en/latest/
+    zincio source = https://github.com/sdjespersen/zincio/
 classifiers =
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
@@ -26,7 +26,7 @@ classifiers =
 
 [options]
 packages =
-    pyzinc
+    zincio
 python_requires = >=3.7
 install_requires=
     pandas >= 1.0.0
